# Graph-RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-05-13T13-46-27-651Z.yml  page-2026-05-13T17-36-15-613Z.yml
docs/: example.md
src/kg_rag/: __init__.py  cli.py  compat.py  config.py  llm.py  logging.py  neo4j_store.py  schema.py
src/kg_rag/components/: __init__.py  context_merger.py  entity_extractor.py  graph_retriever.py
src/kg_rag/pipelines/: __init__.py  indexing.py  query.py
src/kg_rag/web/: __init__.py  app.py
src/kg_rag/web/static/: index.html
tests/: test_context_merger.py  test_entity_extractor.py  test_indexing_helpers.py  test_indexing_pipeline.py  test_indexing_sections.py  test_neo4j_store.py  test_web_app.py
