[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-rag-system"
version = "0.1.0"
description = "Knowledge Graph RAG system with Haystack 2.x, Neo4j 5.x, and HuggingFace Dedicated Endpoints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "haystack-ai>=2.10",
    "neo4j>=5.26",
    "neo4j-haystack>=3.3",
    "sentence-transformers>=3.0",
    "loguru>=0.7",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
kg-rag = "kg_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
