[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-rag-system"
version = "0.1.0"
description = "Knowledge Graph RAG system with Haystack 2.x, Neo4j 5.x, and HuggingFace Dedicated Endpoints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "haystack-ai>=2.10",
    "openai>=1.40",
    "neo4j>=5.26",
    "sentence-transformers>=3.0",
    "loguru>=0.7",
    "pypdf>=4.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
kg-rag = "kg_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
